<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.sanath.myappportfolio.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_nano_degree_apps" />

        <Button
            style="@style/Button"
            android:id="@+id/button_popular_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/popular_movies" />

        <Button
            style="@style/Button"
            android:id="@+id/button_stock_hawk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stock_hawk" />

        <Button
            style="@style/Button"
            android:id="@+id/button_build_it_bigger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/build_it_bigger" />

        <Button
            style="@style/Button"
            android:id="@+id/button_make_you_app_material"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/make_your_app_material" />

        <Button
            style="@style/Button"
            android:id="@+id/button_go_ubiquitous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_ubiquitous" />

        <Button
            style="@style/Button"
            android:id="@+id/button_capstone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@string/capstone" />
    </LinearLayout>
</ScrollView>
